perf: Call rule-engine for evaluation once per program [DHIS2-21178]